<resources>
    <string name="app_name">TMDMobileNG</string>

    <string name="navigation_drawer_header_content_description">Transportation Mode Detection Next Generation</string>
    <string name="navigation_drawer_header_title">Transportation Mode Detection Next Generation</string>
    <string name="fragment_label_collect">Data Collection</string>
    <string name="fragment_label_main">Home</string>
    <string name="fragment_label_detection">Mode Detection</string>
    <string name="fragment_main_announcement">Announcement</string>
    <string name="content_null">None</string>
    <string name="fragment_main_instructions">Guidelines</string>
    <string name="fragment_mode_selection">Mode Selection</string>
    <string name="fragment_radio_still">Still</string>
    <string name="fragment_radio_walk">Walk</string>
    <string name="fragment_radio_run">Run</string>
    <string name="fragment_radio_bike">Bike</string>
    <string name="fragment_radio_car">Car</string>
    <string name="fragment_radio_bus">Bus</string>
    <string name="fragment_radio_train">Train</string>
    <string name="fragment_radio_subway">Subway</string>
    <string name="fragment_detection_tabitem_ict_new">mag</string>
    <string name="fragment_detection_tabitem_ict_old">no_mag</string>
    <string name="fragment_detection_tabitem_htc">HTC</string>
    <string name="fragment_detection_tabitem_hwa">HuaweiA</string>
    <string name="fragment_detection_tabitem_hwb">Online</string>
    <string name="fragment_detection_confusion_matrix">Confusion Matrix</string>
    <string name="fragment_detection_result_field">Result</string>
    <string name="fragment_detection_accuracy_field">Accuracy</string>
    <string name="fragment_detection_recognition_start">Start</string>
    <string name="fragment_detection_recognition_stop">Stop</string>
    <string name="fragment_main_confirm">Confirm</string>
    <string name="fragment_main_cancel">Cancel</string>
    <string name="fragment_detection_result_vote">Vote:</string>
    <string name="fragment_detection_result_model">Model:</string>
    <string name="n_a">N/A</string>
    <string name="fragment_detection_accuracy_model_current">Model(Current)：</string>
    <string name="fragment_detection_accuracy_vote_current">Vote(Current)：</string>
    <string name="fragment_detection_accuracy_model_total">Model(Total)：</string>
    <string name="fragment_detection_accuracy_vote_total">Vote(Total)：</string>
    <string name="fragment_collect_acc">Acc</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="fragment_collect_lacc">LAcc</string>
    <string name="fragment_collect_gyr">Gyr</string>
    <string name="fragment_collect_mag">Mag</string>
    <string name="fragment_collect_pressure">Pressure</string>
    <string name="fragment_collect_start">Start</string>
    <string name="fragment_collect_stop">Stop</string>
    <string name="value">Value</string>
    <string name="alert_stop_collect">Please stop collecting first.</string>
    <string name="alert_at_least_one_mode">Please select at least one mode.</string>
    <string name="alert_select_mode_first">Please select mode first.</string>
    <string name="alert_permission_must_be_given">Permission is required to run this App functionally.</string>
    <string name="alert_collect_first">Please start collecting first.</string>
    <string name="alert_stop_predict_first">Please stop detecting first.</string>
    <string name="ss">Still</string>
    <string name="alert_not_support">Not supported</string>
    <string name="fragment_main_reset">Reset</string>
    <string name="alert_reset_before">Please stop all other operations before resetting.</string>
    <string name="tip">Tip</string>
    <string name="alert_confirm_reset">Please make sure you really want to reset all the historical result and accuracy.</string>
    <string name="yes">Yes</string>
    <string name="alert_reset_ok">Reset Complete</string>
    <string name="no">No</string>
    <string name="software_update">Software Updating</string>
    <string name="alert_downloading_apk">Downloading APK…</string>
    <string name="service_title">TMDMobileNG Core Service</string>
    <string name="service_text">Service is Running…</string>
    <string name="alert_network_error">Network Error.</string>
    <string name="fragment_collect_accler">Hit the gas</string>
    <string name="fragment_collect_brake">Brake</string>
    <string name="dialog_username">Username</string>
    <string name="dialog_remember_me">Remember Me</string>
    <string name="dialog_password">Password</string>
    <string name="login_title">Sign In</string>
    <string name="button_login_ok">Confirm</string>
    <string name="button_login_reg">No account yet?</string>
    <string name="dialog_password_repeat">Password Again</string>
    <string name="reg_title">Sign up</string>
    <string name="button_reg_ok">Confirm</string>
    <string name="alert_password_repeat_error">Incorrect password, please try again.</string>
    <string name="alert_username_null">Empty Username or password, please try again.</string>
    <string name="button_reg_login">BACK</string>
    <string name="online_not_ready">Learning</string>
</resources>
